--- a/Odin.Tests/Odin.Tests.csproj
+++ b/Odin.Tests/Odin.Tests.csproj
@@ -149,6 +149,7 @@
     <Compile Include="Controllers\Api\OrdersControllerTests.cs" />
     <Compile Include="Controllers\OrdersControllerTests.cs" />
     <Compile Include="Controllers\EmailControllerTests.cs" />
+    <Compile Include="Controllers\AppointmentControllerTests.cs" />
     <Compile Include="Domain\ConsultantImporterTests.cs" />
     <Compile Include="Domain\ManagerImporterTests.cs" />
     <Compile Include="Domain\OrderImporterTests.cs" />
@@ -156,6 +157,7 @@
     <Compile Include="Helpers\AccountHelperTests.cs" />
     <Compile Include="Helpers\DateHelperTests.cs" />
     <Compile Include="Helpers\ServiceHelperTests.cs" />
+    <Compile Include="Helpers\ItineraryHelperTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ViewModels\HousingViewModelTests.cs" />
     <Compile Include="ViewModels\HousingPropertyViewModelTests.cs" />
