--- a/Odin/bundleconfig.json
+++ b/Odin/bundleconfig.json
@@ -10,5 +10,17 @@
     "inputFiles": [
       "Scripts/bookmarklet/index.js"
     ]
+  },
+  {
+    "outputFileName": "Scripts/bookmarklet/dist.min.js",
+    "inputFiles": [
+      "Scripts/bookmarklet/dist.js"
+    ]
+  },
+  {
+    "outputFileName": "Scripts/bookmarklet/app.min.js",
+    "inputFiles": [
+      "Scripts/bookmarklet/app.js"
+    ]
   }
 ]
