--- a/Odin.Tests/Odin.Tests.csproj
+++ b/Odin.Tests/Odin.Tests.csproj
@@ -148,6 +148,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Controllers\Api\AccountControllerTests.cs" />
+    <Compile Include="Controllers\Api\BookMarkletControllerTests.cs" />
     <Compile Include="Controllers\Api\OrdersControllerTests.cs" />
     <Compile Include="Controllers\BookMarkletControllerTests.cs" />
     <Compile Include="Controllers\OrdersControllerTests.cs" />
