--- a/Odin.PropBotWebJob/App.Release.config
+++ b/Odin.PropBotWebJob/App.Release.config
@@ -15,6 +15,10 @@
     </connectionStrings>
   -->
 
+  <appSettings>
+    <add key="StorageConnectionString" value="#{AzureStorageConnectionString}#" xdt:Transform="SetAttributes" xdt:Locator="Match(key)" />
+  </appSettings>
+
   <connectionStrings>
     <add name="DefaultConnection"
          connectionString="#{AzureDBConnectionString}#"
