--- a/Odin/packages.config
+++ b/Odin/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="AngleSharp" version="0.9.9" targetFramework="net461" />
   <package id="Antlr" version="3.4.1.9004" targetFramework="net461" />
   <package id="AutoMapper" version="6.2.1" targetFramework="net461" />
   <package id="bootstrap" version="3.3.0" targetFramework="net461" />
@@ -7,6 +8,7 @@
   <package id="BuildWebCompiler" version="1.11.326" targetFramework="net461" />
   <package id="Castle.Core" version="4.1.1" targetFramework="net461" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net461" />
+  <package id="HtmlSanitizer" version="4.0.181" targetFramework="net461" />
   <package id="jQuery" version="1.12.4" targetFramework="net461" />
   <package id="jquery.datatables" version="1.10.15" targetFramework="net461" />
   <package id="jQuery.UI.Combined" version="1.12.1" targetFramework="net461" />
