Add merge migration

--- a/Odin.Data/Odin.Data.csproj
+++ b/Odin.Data/Odin.Data.csproj
@@ -544,6 +544,10 @@
     <Compile Include="Persistence\Migrations\201712111851475_AddViewingDateToHomeFindingProperty.Designer.cs">
       <DependentUpon>201712111851475_AddViewingDateToHomeFindingProperty.cs</DependentUpon>
     </Compile>
+    <Compile Include="Persistence\Migrations\201712131458037_MergeHousingMap.cs" />
+    <Compile Include="Persistence\Migrations\201712131458037_MergeHousingMap.Designer.cs">
+      <DependentUpon>201712131458037_MergeHousingMap.cs</DependentUpon>
+    </Compile>
     <Compile Include="Persistence\Migrations\Configuration.cs" />
     <Compile Include="Persistence\NumberOfBathroomsTypesRepository.cs" />
     <Compile Include="Persistence\OrdersRepository.cs" />
@@ -809,6 +813,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Persistence\Migrations\201712111851475_AddViewingDateToHomeFindingProperty.resx">
       <DependentUpon>201712111851475_AddViewingDateToHomeFindingProperty.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Persistence\Migrations\201712131458037_MergeHousingMap.resx">
+      <DependentUpon>201712131458037_MergeHousingMap.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
