[HOTFIX] Change url for login picture

--- a/Odin.IntegrationTests/App.config
+++ b/Odin.IntegrationTests/App.config
@@ -8,7 +8,7 @@
     <add key="SeApiToken" value="SeApiTokenKeyTest" />
     <add key="IsLocalTestingEnvironment" value="true" />
     <add key="StorageConnectionString" value="UseDevelopmentStorage=true" />
-    <add key="WindowsAzureStorageEmulatorPath" value="\Program Files (x86)\Microsoft SDKs\Azure\Storage Emulator\AzureStorageEmulator.exe" />
+    <add key="WindowsAzureStorageEmulatorPath" value="C:\Program Files (x86)\Microsoft SDKs\Azure\Storage Emulator\AzureStorageEmulator.exe" />
     <add key="MaxDequeueCount" value="5" />
   </appSettings>
   <connectionStrings>
