--- a/Odin.Tests/Odin.Tests.csproj
+++ b/Odin.Tests/Odin.Tests.csproj
@@ -155,6 +155,7 @@
     <Compile Include="Controllers\OrdersControllerTests.cs" />
     <Compile Include="Controllers\EmailControllerTests.cs" />
     <Compile Include="Controllers\AppointmentControllerTests.cs" />
+    <Compile Include="Controllers\MessageControllerTests.cs" />
     <Compile Include="Domain\ConsultantImporterTests.cs" />
     <Compile Include="Domain\ManagerImporterTests.cs" />
     <Compile Include="Domain\OrderImporterTests.cs" />
