--- a/Odin.Tests/Odin.Tests.csproj
+++ b/Odin.Tests/Odin.Tests.csproj
@@ -166,6 +166,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ViewModels\HousingViewModelTests.cs" />
     <Compile Include="ViewModels\HousingPropertyViewModelTests.cs" />
+    <Compile Include="ViewModels\Orders\Index\OrdersIndexViewModelTests.cs" />
     <Compile Include="Views\Helpers\HTMLHelpersTests.cs" />
     <Compile Include="Views\Helpers\MockContext.cs" />
   </ItemGroup>
