Add craigslist bot functionality, still testing individual fields

--- a/Odin.PropBotWebJob/Odin.PropBotWebJob.csproj
+++ b/Odin.PropBotWebJob/Odin.PropBotWebJob.csproj
@@ -208,6 +208,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Bots\CraigslistBot.cs" />
     <Compile Include="Helpers\BotHelper.cs" />
     <Compile Include="Helpers\EmailHelper.cs" />
     <Compile Include="Helpers\ConfigHelper.cs" />
