Add error pages and routing to web config

--- a/Odin/Odin.csproj
+++ b/Odin/Odin.csproj
@@ -757,6 +757,8 @@
     <Content Include="Content\themes\base\theme.css" />
     <Content Include="Content\themes\base\tooltip.css" />
     <Content Include="Content\typeahead.css" />
+    <Content Include="Errors\404.html" />
+    <Content Include="Errors\error.html" />
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
