--- a/Odin/Web.config
+++ b/Odin/Web.config
@@ -33,6 +33,12 @@
     </httpModules>
   </system.web>
   <system.webServer>
+    <httpErrors errorMode="Custom" existingResponse="Replace">
+      <clear/>
+      <error statusCode="403" subStatusCode="14" responseMode="ExecuteURL" path="/error/notfound" />
+      <error statusCode="404" path="/Errors/404.html" responseMode="ExecuteURL"/>
+      <error statusCode="500" path="/Errors/error.html" responseMode="ExecuteURL"/>
+    </httpErrors>
     <modules>
       <remove name="FormsAuthentication" />
       <remove name="ApplicationInsightsWebTracking" />
