--- a/Odin/Web.config
+++ b/Odin/Web.config
@@ -33,6 +33,17 @@
     </httpModules>
   </system.web>
   <system.webServer>
+    <rewrite>
+      <rules>
+        <rule name="Redirect to https">
+          <match url="(.*)"/>
+          <conditions>
+            <add input="{HTTPS}" pattern="Off"/>
+          </conditions>
+          <action type="Redirect" url="https://{HTTP_HOST}/{R:1}"/>
+        </rule>
+      </rules>
+    </rewrite>
     <httpErrors errorMode="Custom" existingResponse="Replace">
       <clear/>
       <error statusCode="403" subStatusCode="14" responseMode="ExecuteURL" path="/error/notfound" />
@@ -50,7 +61,8 @@
       <remove name="OPTIONSVerbHandler" />
       <remove name="TRACEVerbHandler" />
       <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="*" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
-    </handlers></system.webServer>
+    </handlers>
+  </system.webServer>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
