--- a/Odin.Data/Odin.Data.csproj
+++ b/Odin.Data/Odin.Data.csproj
@@ -162,6 +162,7 @@
     <Compile Include="Core\Models\HomeFindingProperty.cs" />
     <Compile Include="Core\Models\Notification.cs" />
     <Compile Include="Core\Models\NotificationType.cs" />
+    <Compile Include="Core\Models\OrderStatus.cs" />
     <Compile Include="Core\Models\Photo.cs" />
     <Compile Include="Core\Models\Property.cs" />
     <Compile Include="Core\Models\Consultant.cs" />
@@ -560,6 +561,10 @@
     <Compile Include="Persistence\Migrations\201712181617292_addReadFlagnUser.Designer.cs">
       <DependentUpon>201712181617292_addReadFlagnUser.cs</DependentUpon>
     </Compile>
+    <Compile Include="Persistence\Migrations\201712212033589_AddSeCustNumbToOrder.cs" />
+    <Compile Include="Persistence\Migrations\201712212033589_AddSeCustNumbToOrder.Designer.cs">
+      <DependentUpon>201712212033589_AddSeCustNumbToOrder.cs</DependentUpon>
+    </Compile>
     <Compile Include="Persistence\Migrations\Configuration.cs" />
     <Compile Include="Persistence\NumberOfBathroomsTypesRepository.cs" />
     <Compile Include="Persistence\OrdersRepository.cs" />
@@ -834,6 +839,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Persistence\Migrations\201712181617292_addReadFlagnUser.resx">
       <DependentUpon>201712181617292_addReadFlagnUser.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Persistence\Migrations\201712212033589_AddSeCustNumbToOrder.resx">
+      <DependentUpon>201712212033589_AddSeCustNumbToOrder.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
