--- a/Odin/Odin.csproj
+++ b/Odin/Odin.csproj
@@ -19,7 +19,7 @@
     <MvcBuildViews>false</MvcBuildViews>
     <UseIISExpress>true</UseIISExpress>
     <Use64BitIISExpress />
-    <IISExpressSSLPort>44394</IISExpressSSLPort>
+    <IISExpressSSLPort>44303</IISExpressSSLPort>
     <IISExpressAnonymousAuthentication />
     <IISExpressWindowsAuthentication />
     <IISExpressUseClassicPipelineMode />
@@ -437,6 +437,12 @@
     </Content>
     <Content Include="Content\css\shared\dw_loading.css" />
     <Content Include="Content\css\shared\thumbnails.carousel.css" />
+    <Content Include="Content\css\transferee\dashboard.css">
+      <DependentUpon>dashboard.scss</DependentUpon>
+    </Content>
+    <Content Include="Content\css\transferee\dashboard.min.css">
+      <DependentUpon>dashboard.css</DependentUpon>
+    </Content>
     <Content Include="Content\css\transferee\details.css">
       <DependentUpon>details.scss</DependentUpon>
     </Content>
@@ -718,6 +724,8 @@
     <Content Include="Content\Images\marker-icon.png" />
     <Content Include="Content\Images\marker-shadow.png" />
     <Content Include="Content\Images\popout_sml_img.png" />
+    <Content Include="Content\Images\task_done.png" />
+    <Content Include="Content\Images\task_notDone.png" />
     <Content Include="Content\Images\user-placeholder.png" />
     <Content Include="Content\css\login.css">
       <DependentUpon>login.scss</DependentUpon>
@@ -854,6 +862,7 @@
     <Content Include="Content\css\transferee\help.scss" />
     <Content Include="Content\css\transferee\propertyMessages.scss" />
     <Content Include="Content\css\transferee\itineraryPdf.scss" />
+    <Content Include="Content\css\transferee\dashboard.scss" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Scripts\DataTables\autoFill.bootstrap.js" />
     <Content Include="Scripts\DataTables\autoFill.bootstrap.min.js" />
